# HW_13

./: main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 96e910d78831_init.py
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  avatar.py  contacts.py
src/services/: auth.py
templates/: index.html
